# wolfram

./: .gitignore  README.md  default.nix  flake.nix  hie.yaml  package.yaml  wolfram.cabal
.github/workflows/: auto-approve.yml  ci.yml  nix-build.yml  update-flake-lock.yml
src/: Options.hs  Wolfram.hs
test/: OptionsSpec.hs  WolframSpec.hs
wolfram/: Main.hs
